2005-05-11  Mike Kestner  <mkestner@novell.com>

	* pango/Makefile.am : add file.
	* pango/Units.cs : new class to wrap PANGO_SCALE and PANGO_PIXELS.
	* pango/glue/units.c : accessors for the macros.
	* pango/glue/Makefile.am : build it.
	* pango/glue/makefile.win32 : build it on win.
	[Fixes #74837]

2005-05-11  Eric Butler  <eric@extremeboredom.net>

	* gtk/Gtk.metadata : add IEnumerable iface to ListStore.
	* gtk/ListStore.cs : add GetEnumerator.
	* gtk/Makefile.am : add file.
	* gtk/TreeEnumerator.cs : root node enumerator for a TreeModel.

2005-05-11  Mike Kestner  <mkestner@novell.com>

	* gtk/Widget.custom : manual ListMnemonicLabels implementation to
	return a Widget[].  [Fixes #74786]

2005-05-11  Mike Kestner  <mkestner@novell.com>

	* generator/ObjectGen.cs : default empty assembly names for the
	mapper.  [Fixes #74769]

2005-05-10  Mike Kestner  <mkestner@novell.com>

	* gtk/Object.custom : Dispose on a Destroyed event.
	* gtk/Widget.custom : rework the parent_set hack to go direct to
	the native signal instead of using the event so we avoid rewrapping of
	already destroyed parents.

2005-05-10  Mike Kestner  <mkestner@novell.com>

	* gdk/Pixbuf.custom : use non-obsolete PixbufLoader.Write overload.
	* gdk/PixbufLoader.custom : add obsolete PixbufLoader.Write overload
	for the uint case for backcompat. Update other uses to the new ulong
	overload.
	* sample/GtkDemo/DemoImage.cs : use PixbufLoader.Write (byte[])
	overload.

2005-05-09  Mike Kestner  <mkestner@novell.com>

	* glib/Object.cs : add a try/catch block to g_object_unref calls to
	help identify "extra unref" bugs when exceptions occur.

2005-05-06  John Luke  <john.luke@gmail.com>

	* pango/Makefile.am: add Matrix.custom
	* pango/Matrix.custom: add Pango.Matrix.Identity field
	which is the equivalent of PANGO_MATRIX_INIT
	* sample/GtkDemo/DemoRotatedText.cs: use Pango.Matrix.Identity
	* doc/en/Pango/Matrix.xml: add docs	for Pango.Matrix.Identity
										