@@ -404,19 +404,19 @@ In general, if you use <see cref="M:Gtk.IconTheme.AddBuiltinIcon()" /> you shoul
       </Docs>
     </Member>
     <Member MemberName="GetIconSizes">
-      <MemberSignature Language="C#" Value="public int GetIconSizes (string icon_name);" />
+      <MemberSignature Language="C#" Value="public int [] GetIconSizes (string icon_name);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
-        <ReturnType>System.Int32</ReturnType>
+        <ReturnType>System.Int32[]</ReturnType>
       </ReturnValue>
       <Parameters>
         <Parameter Name="icon_name" Type="System.String" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Gets a list of the sizes for an Icon by name.</summary>
         <param name="icon_name">a <see cref="T:System.String" /></param>
-        <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
+        <returns>a <see cref="T:System.Int32[]" /></returns>
+        <remarks>An entry of -1 indicates a scalable version of the icon.</remarks>
       </Docs>
     </Member>
   </Members>
