@@ -1,5 +1,11 @@
 2005-05-11  Mike Kestner  <mkestner@novell.com>
 
+	* gtk/Gtk.metadata : hide IconTheme.GetIconSizes.
+	* gtk/IconTheme.custom : implement GetIconSizes because of its zero
+	terminated array return value. 2.6 only.  [Fixes #74844]
+
+2005-05-11  Mike Kestner  <mkestner@novell.com>
+
 	* pango/Makefile.am : add file.
 	* pango/Units.cs : new class to wrap PANGO_SCALE and PANGO_PIXELS.
 	* pango/glue/units.c : accessors for the macros.
